# docs/swagger.json
@@ -11,7 +11,7 @@
     "host": "api.bic-gin.cn",
     "basePath": "/api/bic-gin",
     "paths": {
-        "/v1/auth/": {
+        "/v1/auth": {
             "post": {
                 "produces": [
                     "application/json"
@@ -19,7 +19,7 @@
                 "tags": [
                     "Auth-Service"
                 ],
-                "summary": "获取用户列表",
+                "summary": "登录",
                 "parameters": [
                     {
                         "description": "用户名",
@@ -62,7 +62,7 @@
                 }
             }
         },
-        "/v1/menu/page/action/": {
+        "/v1/menu/:key/action": {
             "post": {
                 "produces": [
                     "application/json"
@@ -73,8 +73,15 @@
                 "summary": "添加菜单页面行为",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "some id",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "参数无注释",
-                        "name": "id",
+                        "name": "key",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -124,7 +131,7 @@
                 }
             }
         },
-        "/v1/menus/": {
+        "/v1/menus": {
             "get": {
                 "produces": [
                     "application/json"
@@ -155,7 +162,7 @@
                 }
             }
         },
-        "/v1/role/:id/": {
+        "/v1/role/:id": {
             "get": {
                 "produces": [
                     "application/json"
@@ -195,7 +202,7 @@
                 }
             }
         },
-        "/v1/roles/": {
+        "/v1/roles": {
             "get": {
                 "produces": [
                     "application/json"
@@ -226,7 +233,7 @@
                 }
             }
         },
-        "/v1/routes/": {
+        "/v1/routes": {
             "get": {
                 "produces": [
                     "application/json"
@@ -257,7 +264,7 @@
                 }
             }
         },
-        "/v1/token/": {
+        "/v1/token/refresh": {
             "post": {
                 "produces": [
                     "application/json"
@@ -299,7 +306,7 @@
                 }
             }
         },
-        "/v1/users/": {
+        "/v1/users": {
             "get": {
                 "produces": [
                     "application/json"
@@ -628,6 +635,12 @@
         "api.RouteItem": {
             "type": "object",
             "properties": {
+                "actions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "children": {
                     "type": "array",
                     "items": {
